--- a/recipes/carmenitza.html
+++ b/recipes/carmenitza.html
@@ -7,5 +7,35 @@
      
      <body>
          <h1>Carmenitza</h1>
-     </body>
+         <img src="../recipes/pictures/Carmenitza.jpg" alt="Tomato Chocolate Cookie">
+        <h4>Double Chocolate Cookie Topped With Pizza</h4>
+        <p>For this recipe we combine a quick mix double chocolate cookie dough baby
+            with all of the toppings typically reserved for pizza dough. Pizza Sauce, Peppers, Salami, Mozzarella. 
+            Whatever floats <em>your</em> chocolate-ee pizza-ee boat. We truly mean <em>whatever</em>.
+        </p>
+
+         <p>(Exceptions include Lego Bricks.)</p>
+
+         <h6>Ingredients</h6>
+         <ul>
+             <li>Quick Mix Double Chocolate Cookie Mix or Premade Cookies</li>
+             <li>Pizza Sauce</li>
+             <li>A Meat</li>
+             <li>A Pepper</li>
+             <li>Mozzarella</li>
+        </ul>
+        <h6>Steps</h6>
+        <ol>
+            <li>Follow the steps on the quick mix up to the point they are being baked. If you've selected
+                premade cookies then you'll be getting down with that charcoal crunch. In the world of branding
+                we call that charcoal flavour gothic. But remember, this isn't activated charcoal and so it
+                is not going to detoxify your body.</li>
+            <li>Then we smother the cookie(s) with the pizza sauce. Dab it. Apply a hair thin layer. Dip it. Whatever.</li>
+            <li>Time for the toppings. Throw your meat on that cookie. Slice of salami. Full on pork chop. Whole pepper. Slice pepper. Whatever.</li>
+            <li>Then blanket that topped up cookie in a slab of mozzarella. This'll trap in all those sweaty flavours.</li>
+            <li>Follow the quick mix baking time, maybe go back in time and do steps 2 through four in the middle of the bake time, OR, IF YOU CHOSE A DRY COOKIE, bake for eight minutes to sog it up.</li>
+            <li>Enjoy</li>
+        </ol>
+
+    </body
 </html>
