--- a/recipes/carmenitza.html
+++ b/recipes/carmenitza.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta chartset="uts-8">
+        <meta chartset="utf-8">
         <Title>Carmenitza is the only Pizza</Title>
      </head>
      
