Linked Coffee Poutine

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
 <body>
 <h1>Odin Recipes</h1>
-<a href="./recipes/carmenitza.html">Carmenitza</a>
+<ul>
+<li><a href="./recipes/carmenitza.html">Carmenitza</a></li>
+<li><a href="./recipes/coffee-poutine.html">Coffee Poutine</a></li>
+</ul>
 </body>
 </html>
