--- a/recipes/coffee-poutine.html
+++ b/recipes/coffee-poutine.html
@@ -8,5 +8,32 @@
     <body>
         <h1>Coffee Poutine</h1>
         <img src="../recipes/pictures/Coffeepoutine.jpg" alt="Wedged Sludge">
+        <h4>This here. This here is a cup of soft salty goodness. Perfect for that mouthguard mouthfeel.</h4>
+        <p>Have you ever taken a mouthful out of of a baked russet potato and thought
+            to yourself "Why, this sure could use some sort of salty lubricant"? Thats what we are here for.
+            Applying that lubricant. Salting that potato. Filling you up.
+        </p>
+
+        <h6>Ingredients</h6>
+        <ul>
+            <li>Fries</li>
+            <li>Mug</li>
+            <li>Hot Coffee</li>
+            <li>Cheese Curds</li>
+            <li>Salt</li>
+        </ul>
+
+        <h6>Steps</h6>
+        <ol>
+            <li>We won't ask you how you obtained your fries and your mug. And we claim no responsibility
+                for whatever terrible deeds you had to commit in order to obtain these prized ingredients. We also do not know 
+                how you decided to carry these ingredients and will not reimburse you for your ruined jacket pockets. All we ask is that you place the fries in the mug. 
+            </li>
+            <li>And then salt those fries to your tasting. Did you buy pre salted fries? Too bad. Salt them.</li>
+            <li>Toss some cheese curds on top of those fries.</li>
+            <li>Douse your chewy beverage in hot coffee.</li>
+            <li>Watch the curds melt and the fries sponge.</li>
+            <li>Sip it knowing this is how beverages were meant to be.</li>
+        </ol>
     </body>
 </html>
