--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <ul>
 <li><a href="./recipes/carmenitza.html">Carmenitza</a></li>
 <li><a href="./recipes/coffee-poutine.html">Coffee Poutine</a></li>
+<li><a href="./recipes/fanciest-water.html"></a></li>
 </ul>
 </body>
 </html>
