There's water in that water

--- a/recipes/fanciest-water.html
+++ b/recipes/fanciest-water.html
@@ -8,5 +8,28 @@
     <body>
         <h1>Fanciest Water</h1>
         <img src="../recipes/pictures/FancyWater.jpg" alt="It Is Wet?">
+        <h4>The cloudier the more particular. The more particular the less common. Hypebeast.</h4>
+        <p>Imagine, if you would, a pair of dentures. Sitting there, in a glass, on some ancient bedside table.</p>
+        <p>Maybe you are imagining the dentures from Red Dragon. Those biters. Those bite marks. Criminal Evidence.</p>
+        <p>Aren't you forgetting something though? Don't they...float?</p>
+        <p>What sort of beverage is so tasty that someone would want to perpetually submerge their dentures in it?</p>
+        <p>Let's quench that posthumous thirst.</p>
+
+        <h6><s>Ingredients</s></h6>
+        <h6>Bottles of Water</h6>
+        <ul>
+            <li>Voss</li>
+            <li>Aquafina</li>
+            <li>Evian</li>
+            <li>Nestle</li>
+        </ul>
+
+        <h6>Steps</h6>
+        <ol>
+            <li>Pour out three quarters of water from your preferred bottle</li>
+            <li>Pour equal parts Voss, Aquafina, Evian, Nestle, minus the brand of the preferred bottle into the preferred bottle.</li>
+            <li>Remove Dentures</li>
+            <li>Pat yourself on the back. The dectives haven't figured out your moon cycle yet.</li>
+        </ol>
     </body>
 </html>
